# firstperson-teleoperation

./: README.md
HapticGloveTelecontrol/: .cproject  .project
HapticGloveTelecontrol/include/: SensorGloveInterface.h  YarpAdapter.h
HapticGloveTelecontrol/src/: SensorGloveInterface.cpp  TelecontrolMain.cpp  YarpAdapter.cpp
ICubTelecontrol/: .cproject  .project
ICubTelecontrol/include/: Filter.h  GloveAdapter.h  KMatrix.h  Kinect.h  KinectAdapter.h  MultidimensionalFilter.h  OculusAdapter.h  Plain.h  TelecontrolMain.h  Vector.h  YarpAdapter.h
ICubTelecontrol/src/: Filter.cpp  GloveAdapter.cpp  KMatrix.cpp  KinectAdapter.cpp  MultidimensionalFilter.cpp  OculusAdapter.cpp  Plain.cpp  TelecontrolMain.cpp  Vector.cpp  YarpAdapter.cpp
iCubKinectControl/: .cproject  .project  CMakeLists.txt
iCubKinectControl/include/: BodyBasics.h  YarpAdapter.h
iCubKinectControl/src/: BodyBasics.cpp  YarpAdapter.cpp
iCubOculusControl/: CMakeLists.txt
iCubOculusControl/include/: Filter.h  ICubOculusController.h  MultidimensionalFilter.h  OculusAdapter.h  Plain.h  Vector.h  YarpAdapter.h  stdafx.h
iCubOculusControl/src/: Filter.cpp  ICubOculusController.cpp  MultidimensionalFilter.cpp  OculusAdapter.cpp  YarpAdapter.cpp
